--- a/package.json
+++ b/package.json
@@ -10,15 +10,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@feathersjs/feathers": "^4.5.15",
+    "@feathersjs/rest-client": "^4.5.15",
+    "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
     "expo-status-bar": "~1.3.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-elements": "^3.4.2",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
+    "expo-checkbox": "~2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash": "^4.14.182",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
