--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
+    "debounce": "^1.2.1",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-checkbox": "~2.1.0",
     "expo-status-bar": "~1.3.0",
     "lodash": "^4.17.21",
     "react": "17.0.2",
@@ -29,11 +31,11 @@
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-saga": "^1.1.3",
-    "expo-checkbox": "~2.1.0"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/debounce": "^1.2.1",
     "@types/lodash": "^4.14.182",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
